# mrcp

./: Dockerfile  index.html  mrcp.docx  requirements.txt  servidor_websocket.py  servidor_websocket2.py
servicio_mrcp/: Cargo.toml
servicio_mrcp/src/: main.rs
