[package]
name = "servicio_mrcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.20"
tungstenite = "0.20"  # ✅ Agregar tungstenite directamente
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
futures-util = "0.3"
